# agent_personal

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  docker-compose.sandbox.yml  pyproject.toml  requirements.txt  termios.py  test.py  upao.mplstyle
docs/: arquitectura_y_operacion.md  hermes_level_cli_roadmap.md  mcp_client_refactor_phases.md  plan_sandbox_web_tools.md  specification_driven_development.md  trazabilidad_dataset_sqlite.md  uso_orquestador_ollama_distribuido.md
examples/: ollama_nodes.example.json
prompts/: registry.json
prompts/context/: runtime_context.md  subagents.md  tools.md
prompts/modes/: final_answer.md
prompts/system/: base.md
src/mcp/: mcp_runtime.sdd.md  path_policies.py  security.py  server.py
src/mcp_client/: __init__.py  mcp_client.sdd.md  tool_results.py
src/mcp_server/: __init__.py  mcp_server.sdd.md
src/mcp_shared/: __init__.py  agent_contracts.py  (+7 more)
tests/: test_autowrite_markdown.py  test_bm25_ranker.py  test_console_and_prompts.py  test_console_objectives.py  test_context_window.py  test_data_tools.py  test_embedding_client.py  test_kv_embeddings_schema.py  test_kv_search_function.py  test_kv_set_with_embedding.py  test_kv_store_embedding_methods.py  test_memory_store.py  test_prompt_context_slimming.py  test_routing_media.py  test_runtime_execute_defaults.py  test_server_prompt_templates.py  test_skill_injection.py  test_skills.py  test_slash_submenus.py  test_subagents.py  test_team_prompt_and_tool_guard.py  test_tool_result_effective_status.py  test_vision_model_selection.py  test_worker_execute_policy.py
(+182 files in other folders)
