[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-mcp-agent"
version = "0.1.0"
description = "Cliente MCP local con orquestador Ollama distribuido, tools y sesiones persistentes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10,<3",
    "rich>=13.7,<15",
    "prompt_toolkit>=3.0,<4",
    "pyserial>=3.5,<4",
    "opencv-python>=4.9,<5",
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
]

[project.scripts]
rag-agent = "src.mcp_client.commands.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".pytest_tmp",
    "external_references",
    "pytest-cache-files-*",
]
